# BioSim

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LICENSE.md  README.md  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake  qtcsettings.cmake
.cmake/api/v1/reply/: cache-v2-c9f79d922d5680d03662.json  cache-v2-d7e56faf6cd0ff9cfd0e.json  cmakeFiles-v1-0b6fca3d3972bde4d74b.json  cmakeFiles-v1-bbd9faeadc3088c8cba8.json  codemodel-v2-23757688f79d4eb1ad74.json  codemodel-v2-6966f8cc827479849ff9.json  directory-_deps.sfml-build-RelWithDebInfo-3714a91b1578fa461e99.json  directory-_deps.sfml-build.src.SFML.Audio-Debug-3a3a3d714b950ab84d75.json  directory-_deps.sfml-build.src.SFML.Audio-RelWithDebInfo-259e43d8da07b375b06e.json  directory-_deps.sfml-build.src.SFML.Audio-Release-ac7d685000beaa8ec3b6.json  directory-_deps.sfml-build.src.SFML.Graphics-Debug-181f692d1132f7323102.json  directory-_deps.sfml-build.src.SFML.Graphics-RelWithDebInfo-3d72401ed8100ea1f048.json  directory-_deps.sfml-build.src.SFML.Graphics-Release-38ea567f95a38170229a.json  directory-_deps.sfml-build.src.SFML.Network-Debug-67e865f0bda90d66c4f0.json  directory-_deps.sfml-build.src.SFML.Network-RelWithDebInfo-c68f7c8cd51ace1a28f4.json  index-2025-10-24T14-40-25-0799.json  (+32 more)
.qtc_clangd/: compile_commands.json
docs/: ARCHITECTURE.md  CONTROLS.md
src/: entity.cpp  entity.h  gui.cpp  gui.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h  simulation.cpp  simulation.h  survivallogic.cpp  survivallogic.h  terraintype.cpp  terraintype.h
